--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
         key: ${{ secrets.VPS_SSH_KEY }}
         port: 2112
         script: |
-          mkdir -p /var/www/keuangan
+          mkdir -p /var/www/html
 
     - name: Deploy to VPS
       uses: appleboy/scp-action@v1
@@ -32,7 +32,7 @@ jobs:
         key: ${{ secrets.VPS_SSH_KEY }}
         port: 2112
         source: "./*"
-        target: /var/www/keuangan
+        target: /var/www/html
 
     - name: configure database 
       uses: appleboy/ssh-action@v1
@@ -42,7 +42,7 @@ jobs:
         key: ${{ secrets.VPS_SSH_KEY }}
         port: 2112
         script: |
-          cd /var/www/keuangan
+          cd /var/www/html
           git pull origin main
           docker-compose up -d --build
           docker exec keuangan-db mysql -u user -p123 -e "use keuangan; create table data(id int, keterangan varchar(20), jenis varchar(50)); insert into data(id, keterangan, jenis) values (01,'kas rutin','pengeluaran');" keuangan
