--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,4 +45,4 @@ jobs:
           cd /var/www/html
           git pull origin main
           docker-compose up -d --build
-          docker exec keuangan-db mysql -u user -p123 -e "use keuangan; create table data(id int, keterangan varchar(20), jenis varchar(50)); insert into data(id, keterangan, jenis) values (01,'kas rutin','pengeluaran');" keuangan
+          docker exec keuangan-db mysql -u user -p123 -e "use keuangan; insert into data(id, keterangan, jenis) values (01,'kas rutin','pengeluaran');" keuangan
